third_party/rust/pin-project/tests/ui/pin_project/overlapping_unpin_struct.stderr
error[E0277]: `PhantomPinned` cannot be unpinned
  --> tests/ui/pin_project/overlapping_unpin_struct.rs:18:5
   |
18 |     is_unpin::<S<PhantomPinned>>(); //~ ERROR E0277
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ within `_::__S<'_, PhantomPinned>`, the trait `Unpin` is not implemented for `PhantomPinned`
   |
   = note: consider using `Box::pin`
note: required because it appears within the type `_::__S<'_, PhantomPinned>`
  --> tests/ui/pin_project/overlapping_unpin_struct.rs:6:8
   |
6  | struct S<T> {
   |        ^
note: required because of the requirements on the impl of `Unpin` for `S<PhantomPinned>`
  --> tests/ui/pin_project/overlapping_unpin_struct.rs:5:1
   |
5  | #[pin_project]
   | ^^^^^^^^^^^^^^
6  | struct S<T> {
   |        ^^^^
note: required by a bound in `is_unpin`
  --> tests/ui/pin_project/overlapping_unpin_struct.rs:15:16
   |
15 | fn is_unpin<T: Unpin>() {}
   |                ^^^^^ required by this bound in `is_unpin`
   = note: this error originates in the derive macro `::pin_project::__private::__PinProjectInternalDerive` (in Nightly builds, run with -Z macro-backtrace for more info)
